Created the Router

--- a/views/register.ejs
+++ b/views/register.ejs
@@ -9,7 +9,7 @@
 <body>
     <fieldset>
 
-        <legend>Register Form</legend>
+        <legend>Registeration Form</legend>
 
         <form action="" method="post">
             <input type="text" name="username" placeholder="Enter your username">
